--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			находится в папке css-->
 		<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/animate (1).css">
 </head>
 
 <body>
@@ -29,23 +30,26 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-7">
-				<img class="header-img"src="img/main-img.png" alt="Монитор ">
+				<img class="header-img wow fadeInLeftBig"src="img/main-img.png" alt="Монитор ">
 			</div>
 			<!-- /.col-7 -->
 			<div class="col-lg-5">
-				<p class="header-pretitle">Веб-разработчик</p>
-				<h1 class="header-title">Утегенов Олжас</h1>
-				<p class="header-subtitle">Верстка на HTML/CSS <br>
+				<p class="header-pretitle wow fadeInRightBig" 
+				data-wow-delay="0.1s">Веб-разработчик</p>
+				<h1 class="header-title wow fadeInRightBig"
+				 data-wow-delay="0.2s">Утегенов Олжас</h1>
+				<p class="header-subtitle wow fadeInRightBig"
+				 data-wow-delay="0.3s">Верстка на HTML/CSS <br>
 Разработка сайтов под ключ <br>
 Парсинг данных <br>
 Помощь Opencard,Wordpress
 </p>
-<div class="header-button-block">
-	<a href="https://vk.com/id339631168" class="header-button">Связаться</a>
+<div class="header-button-block" data-wow-delay="0.4s">
+	<a href="https://vk.com/id33963168" class="header-button">Связаться</a>
 <small>*Это бесплатно</small>
 </div>
 			</div>
-			<!-- /.col-5 -->
+			<!-- /.col-5 --> 
 		</div>
 		<!-- /.row -->
 	</div>
@@ -54,7 +58,7 @@
 
 <section class="portfolio">
 	<div class="container">
-		<div class="portfolio-block">
+		<div class="portfolio-block wow fadeIn">
 			<h2 class="portfolio-title">Портфолио</h2>
 			<p class="portfolio-subtitle">Мои работы</p>
 			<div class="row">
@@ -90,10 +94,10 @@
 			<div class="col-md-4">
 				<div class="social-block">
 					<p>Подпишитесь:</p>
-					<a href="https://www.facebook.com/profile.php?id=100016811231511"><img src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
-					<a href="https://t.me/DevelopmentOfWebSites"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a>
-					<a href="https://vk.com/id339631168"><img src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
-					<a href="https://freelancehunt.com/freelancer/Utegenov.html"><img src="img/socials/youtube-symbol.png" alt="Freelancehunt"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.1s" href="https://www.facebook.com/profile.php?id=100016811231511"><img   src="img/socials/facebook-logo-button.png" alt="Facebook"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.2s" href="https://t.me/DevelopmentOfWebSites"><img src="img/socials/telegram-symbol.png" alt="Telegram"></a> 
+					<a class="wow bounceInDown" data-wow-delay="0.3s" href="https://vk.com/id339631168"><img   src="img/socials/vk-social-logotype.png" alt="Вконтакте"></a>
+					<a class="wow bounceInDown" data-wow-delay="0.4s" href="https://freelancehunt.com/freelancer/Utegenov.html"><img src="img/socials/youtube-symbol.png" alt="Freelancehunt"></a>
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -106,5 +110,9 @@
 	</div>
 </footer>
 
+<script src="js/wow.min.js"></script>
+<script>
+	new WOW().init(); 
+</script>`
 </body>
 </html>
